Add CSS for img, headings and container-class

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,3 +11,19 @@ body {
     letter-spacing: 1.5px;
     background: #a1c3ff;
 }
+
+img {
+    border-radius: 50%;
+    height: 600px;
+    width: 600px;
+}
+
+h1, h2 {
+    margin-bottom: 15px;
+}
+
+.container {
+    max-width: 1100px;
+    margin: 0 auto;
+    padding: 0 30px;
+}
