--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -22,8 +22,45 @@ h1, h2 {
     margin-bottom: 15px;
 }
 
+ul {
+    list-style-type: none;
+}
+
 .container {
     max-width: 1100px;
     margin: 0 auto;
     padding: 0 30px;
+}
+
+#navbar {
+    background: #3474e6;
+    color: #fff;
+    height: 60px;
+}
+
+.logo {
+    font-size: x-large;
+    font-weight: bold;
+}
+
+#navbar a {
+    color: #fff;
+    text-decoration: none;
+    font-size: 18px;
+    font-weight: bold;
+}
+
+#navbar .container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 100%;
+}
+
+#navbar ul {
+    display: flex;
+}
+
+.nav-links li {
+    margin-left: 20px;
 }
