--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,8 +14,9 @@ body {
 
 img {
     border-radius: 50%;
-    height: 600px;
-    width: 600px;
+    max-height: 600px;
+    max-width: 600px;
+    margin: 30px;
 }
 
 h1, h2 {
@@ -63,4 +64,22 @@ ul {
 
 .nav-links li {
     margin-left: 20px;
+}
+
+.header {
+    background-color: #0151cc;
+    color: #fff;
+    min-height: 400px;
+}
+
+.header h1 {
+    font-size: 3rem;
+    font-weight: bold;
+    line-height: 1.2;
+}
+
+.header .container {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 }
