--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -28,7 +28,7 @@ ul {
 }
 
 .container {
-    max-width: 1100px;
+    max-width: 1800px;
     margin: 0 auto;
     padding: 0 30px;
 }
@@ -82,4 +82,18 @@ ul {
     display: flex;
     align-items: center;
     justify-content: space-between;
+}
+
+.boxes .container {
+    display: flex;
+    justify-content: space-between;
+}
+
+.box {
+    flex: 1;
+    background: #0a51cc;
+    color: #fff;
+    border-radius: 10px;
+    margin: 20px 10px;
+    padding: 15px 20px;
 }
