--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -97,3 +97,21 @@ ul {
     margin: 20px 10px;
     padding: 15px 20px;
 }
+
+@media screen and (max-width: 900px) {
+    .header .container {
+        flex-direction: column;
+        padding-top: 20px;
+        text-align: center;
+    }
+
+    .boxes .container {
+        display: block;
+        text-align: center;
+    }
+
+    img {
+        max-width: 80%;
+    }
+}
+
